k8s/tsdd/yueyan/wk/wk-svc-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: yueyan-wk-lb-5100-5200
  namespace: yueyan
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"  # 使用 NLB (Network Load Balancer)
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  internalTrafficPolicy: Cluster
  loadBalancerClass: service.k8s.aws/nlb
  selector:
    name: yueyan-wk  # 与 Deployment 中的 Pod selector 匹配
  ports:
    - name: app
      port: 5100
      targetPort: 5100
      protocol: TCP  # App 长连接的 TCP 端口
    - name: websocket
      port: 5200
      targetPort: 5200
      protocol: TCP  # WebSocket 长连接的 TCP 端口
    - name: grpc
      port: 5210
      targetPort: 5210
      protocol: TCP  # WebSocket 长连接的 TCP 端口
