k8s/tsdd/yueyan/wk/wk-svc.yaml
# services-cluster-ip.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: yueyan-wk-svc
  namespace: yueyan
spec:
  type: ClusterIP
  selector:
    name: yueyan-wk
  ports:
    - name: http
      port: 5001
      targetPort: 5001
      protocol: TCP
    - name: app-tcp
      port: 5100
      targetPort: 5100
      protocol: TCP
    - name: websocket
      port: 5200
      targetPort: 5200
      protocol: TCP
    - name: grpc
      port: 5210
      targetPort: 5210
      protocol: TCP
