k8s/tsdd/yueyan/wk/wk-wss-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wss-ainuo-cyou-ingress
  namespace: ainuo
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - wss.bjmwxh.com
    secretName: wss-ainuo-cyou-tls
  rules:
  - host: wss.ainuo.cyou
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ainuo-wk-svc
            port:
              number: 5200
